# PTO-parser

./: .gitignore  .gitmodules  07.py  07_correct.py  CMakeLists.txt  README.md  test.py  torch_test.py  triton_kernel0_test.py  triton_kernel1_test.py  triton_kernel2_test.py  triton_kernel3_test.py  triton_kernel4_test.py  triton_kernel5_test.py  triton_kernel6_test.py  triton_kernel7_test.py  triton_kernel8_test.py
include/: analyzer.hh  ast_node.hh  ast_process.hh  logger.hh  options.hh  parser.hh  ptoNode.hh  ptoType.hh
src/: aliasCoalesce.cc  analyzer.cc  ast_process.cc  deadCodeEliminate.cc  logger.cc  main.cc  options.cc  parser.cc  ptoNode.cc  ptoType.cc  removeYield.cc  staticTypeCheck.cc  toTorch.cc  toTriton.cc
